Fixed line break issue with user input from textarea. Any line breaks added by user now persist when text is rendered. Adjusted styling of card alignment.

--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -20,16 +20,18 @@
     }
 
     .prompt-text {
-        @include flexbox(flex, column, center, center);
+        @include flexbox(flex, column, center, null);
         width: 100%;
         padding: .5rem;
         text-wrap: wrap;
+        white-space: pre-line
     }
 
     .exerpt-text {
         @include flexbox(flex, column, flex-start   , center);
         padding: .5rem;
         background-color: $dark3;
+        white-space: pre-line
     }
 
     .option {
